--- a/WebContent/web/web_page/css/style.css
+++ b/WebContent/web/web_page/css/style.css
@@ -69,6 +69,10 @@ body{
 	top:40%;
 	left:50%;
 	transform:translate(-50%, -50%);
+	
+	
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 .m-content {
 	position:relative;
